# ImageConvert

./: README.md
ImageConvert/: CMakeLists.txt  ImageConvert.sln
ImageConvert/Debug/: ImageConvert.ilk
ImageConvert/ImageConvert/: ImageConvert.vcxproj  ImageConvert.vcxproj.filters  Kaleidoscope.cpp  Kaleidoscope_Debugger.h  Kaleidoscope_utils.cpp  Kaleidoscope_utils.h  TextObject.h  VariableManagement.cpp  VariablesManagementl.h  Window.h  Wrapper.h  bmp.c  bmp.h  bmp.h.gch  bmpp.c  bmpprocess.cpp  camera.h  config_macros.h  def_utils.h  glad.c  glim.cpp  glim.h  lmath.cpp  lmath.h  miniBash.c  script.js  shader.h
ImageConvert/ImageConvert/Debug/: bmp.obj.enc  glim.obj.enc  vc141.idb
ImageConvert/ImageConvert/Debug/ImageConvert.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ImageConvert.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
